Finished base project.  Everything works

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <div class="overlay hidden">
             <div class="modal">
                 <p class="modal-close">X</p>
-                <div class="modal-text">
+                <div class="modal-content">
                     <!-- Modal information will be added here with JS -->
                     <img class="avatar" src="images/member-3.jpg">
                     <div class="text-container">
@@ -134,6 +134,6 @@
             </div>
         </div>
 
-        <script src="js/fetch.js"></script>
+        <script src="js/app.js"></script>
     </body>
 </html>
