Everything works.  Possible formatting and styling to come

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
         <!-- style sheets -->
         <link rel="stylesheet" href="css/styles.css">
+        <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
     </head>
     <body>
         
@@ -50,6 +51,10 @@
                 <p class="modal-close">X</p>
                 <div class="modal-content">
                     <!-- Modal information will be added here with JS -->
+                </div>
+                <div class="arrows">
+                        <p class="left-arrow"><</p> 
+                        <p class="right-arrow">></p>
                 </div>
             </div>
         </div>
