--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
         <!-- style sheets -->
         <link rel="stylesheet" href="css/styles.css">
         <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
-    </head>
+        <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">    </head>
     <body>
         
         <header class="main-header">
             <h1>Awesome Startup Employee Directory</h1>
             <div class="search">
-                <input type="text" class="searchbar" placeholder="Search">
+                <input type="text" class="searchbar" placeholder="  Search">
             </div>
         </header>
 
